2007-04-04 Sebastien Granjoux <seb.sfo@free.fr>

	* plugins/debug-manager/debugger.c,
	plugins/debug-manager/plugin.c,
	plugins/gdb/anjuta-gdb.plugin.in:
	Code cleaning (remove unused code, rename this into self)
	Add information about supported format in debugger plugin
	Activate debugger plugin according to the target format

2007-04-01  Naba Kumar  <naba.kumar@gnome.org>

	* plugins/message-view/message-view.c:
	(message_view_instance_init): Fixed message icons to appear.

2007-03-31  Johannes Schmid <jhs@gnome.org>

	* plugins/message-view/anjuta-msgman.c:
	(anjuta_msgman_append_view):
	* plugins/message-view/plugin.c: (on_view_changed),
	(ianjuta_msgman_add_view), (ianjuta_msgman_set_current_view):
	
	Fixed #424845

2007-03-31  Johannes Schmid <jhs@gnome.org>

	* plugins/message-view/message-view.c:
	(message_view_instance_init), (imessage_view_append):
	Show nice icons beside the messages for info, warning and error. This is a completly
	cosmetic change so if someone dislikes it he is free to remove it.

2007-03-31  Johannes Schmid <jhs@gnome.org>
	
	* plugins/message-view/anjuta-msgman.c: (on_notebook_switch_page),
	(anjuta_msgman_class_init), (anjuta_msgman_append_view),
	(anjuta_msgman_remove_view), (anjuta_msgman_set_current_view):
	* plugins/message-view/anjuta-msgman.h:
	* plugins/message-view/message-view.h:
	* plugins/message-view/plugin.c: (on_view_changed),
	(activate_plugin):
	Fixed #359399 and made next/previous insensitive when not availible
	
	* plugins/sourceview/anjuta-languages-manager.c: (color_to_string),
	(tag_style_to_string):
	Fixed namespace Problem with gdk >= 2.11
	
	* plugins/sourceview/sourceview-autocomplete.c:
	(sourceview_autocomplete_init):
	Removed structure, follow-up of #423682

2007-03-29 Sebastien Granjoux <seb.sfo@free.fr>

	* plugins/debug-manager/debug_tree.c,
	plugins/debug-manager/debug_tree.h,
	plugins/debug-manager/watch.c,
	plugins/debug-manager/anjuta-debug-manager.glade:
	Inspect variable at cursor