@@ -26,8 +26,6 @@ Requires: 	libgnomeui >= @GNOME_UI_REQUIRED@
 Requires: 	libgnomeprint22 >= @GNOME_PRINT_REQUIRED@
 Requires: 	libgnomeprintui22 >= @GNOME_PRINT_UI_REQUIRED@
 Requires: 	gnome-vfs2 >= @GNOME_VFS_REQUIRED@
-Requires: 	libbonobo >= @BONOBO_REQUIRED@
-Requires: 	libbonoboui >= @BONOBO_UI_REQUIRED@
 Requires: 	vte >= @VTE_REQUIRED@
 Requires: 	libxml2 >= @LIBXML_REQUIRED@
 Requires: 	pango >= @PANGO_REQUIRED@
@@ -48,8 +46,6 @@ BuildRequires: 	libgnomeui-devel >= @GNOME_UI_REQUIRED@
 BuildRequires: 	libgnomeprint22-devel >= @GNOME_PRINT_REQUIRED@
 BuildRequires: 	libgnomeprintui22-devel >= @GNOME_PRINT_UI_REQUIRED@
 BuildRequires: 	gnome-vfs2-devel >= @GNOME_VFS_REQUIRED@
-BuildRequires: 	libbonobo-devel >= @BONOBO_REQUIRED@
-BuildRequires: 	libbonoboui-devel >= @BONOBO_UI_REQUIRED@
 BuildRequires: 	vte-devel >= @VTE_REQUIRED@
 BuildRequires: 	libxml2-devel >= @LIBXML_REQUIRED@
 BuildRequires: 	pango-devel >= @PANGO_REQUIRED@
