@@ -1,7 +1,7 @@
 
 SUBDIRS = terminal cpp gtk anjuta-plugin gnome \
 	gtkmm wxwin xlib xlib-dock gcj java \
-	python # mkfile
+	python mkfile
 
 wizard_filesdir = $(anjuta_data_dir)/project
 wizard_files_DATA = \
@@ -27,9 +27,9 @@ wizard_files_DATA = \
 	java.wiz \
 	java-logo.png \
 	python.wiz \
-	python-logo.png
-#  mkfile.wiz \
-#  mkfile-logo.png
+	python-logo.png \
+	mkfile.wiz \
+	mkfile-logo.png
 
 BUILT_SOURCES = translatable-strings.h extract-translatable-strings.pl
 translatable-strings.h: $(wizard_files_DATA)
