@@ -7,7 +7,7 @@
 
 <page name="options" _label="Project options" _description="Project directory, output file etc.">
 	<property type="string" name="Name" _label="Project name:" _description="" default="foobar" mandatory="yes" summary="yes"/>
-	<property type="directory" name="Destination" _label="Project directory:" _description="default="[+AnjutaProjectDirectory+]/[+(string-downcase (get "Name"))+]" mandatory="yes" exist="no" summary="yes"/>
+	<property type="directory" name="Destination" _label="Project directory:" _description="" default="[+AnjutaProjectDirectory+]/[+(string-downcase (get "Name"))+]" mandatory="yes" exist="no" summary="yes"/>
 </page>
 
 <content>
