@@ -42,7 +42,10 @@ char *s = N_("Plugin class name");
 char *s = N_("Plugin has menus or/and toolbars");
 char *s = N_("Plugin interfaces to implement");
 char *s = N_("Project Name:");
+char *s = N_("Project directory, output file etc.");
+char *s = N_("Project directory:");
 char *s = N_("Project name must not contain spaces, because it will be the name of the project build target (executable, library etc.)");
+char *s = N_("Project name:");
 char *s = N_("Project options");
 char *s = N_("Require Package:");
 char *s = N_("Select code license");
